Lab04/01_pod_1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-web1
spec:
  containers:
    - name: web
      image: gcr.io/google-samples/hello-app:1.0
      ports:
        - name: web
          containerPort: 8080
          protocol: TCP
