Lab04/01_pod_2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-web2
spec:
  containers:
    - name: web
      image: gcr.io/google-samples/hello-app:1.0
      ports:
        - name: web
          containerPort: 8080
          protocol: TCP
    - name: nginx
      image: nginx
      ports:
        - name: nginx
          containerPort: 80
          protocol: TCP
