Lab04/02_deployment_3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web01
spec:
  selector:
    matchLabels:
      app: web01
  strategy:
    #type: Recreate
    type: RollingUpdate
    # rollingUpdate:
    #    maxSurge: 1
    #    maxUnavailable: 0
    # rollingUpdate:
    #     maxSurge: 25%
    #     maxUnavailable: 25%  
  replicas: 2
  template:
    metadata:
      labels:
        app: web01
    spec:
      containers:
        - name: web01
          image: mzegarra/lpsa:1.0
          imagePullPolicy: Always
          ports:
            - name: http-api
              containerPort: 80
