Lab04/04_all_2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web01
spec:
  selector:
    matchLabels:
      app: web01
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
    # rollingUpdate:
    #   maxSurge: 1
    #   maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      labels:
        app: web01
    spec:
      containers:
        - name: web01
          image: mzegarra/lpsa:1.0
          imagePullPolicy: Always
          ports:
            - name: http-api
              containerPort: 80
