Lab04/04_all_1_private.yaml
apiVersion: v1
kind: Service
metadata:
  name: web01
  labels:
    app: web01
    env: dev
spec:
  ports:
    - name: http-api
      port: 9060
      targetPort: 80
  selector:
    app: web01
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web01
  labels:
    app: web01
    env: dev
spec:
  selector:
    matchLabels:
      app: web01
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
    # rollingUpdate:
    #   maxSurge: 1
    #   maxUnavailable: 0
  replicas: 2
  template:
    metadata:
      labels:
        app: web01
    spec:
      containers:
        - name: web01
          image: mzegarra/lpsa:1.0
          imagePullPolicy: Always
          ports:
            - name: http-api
              containerPort: 80
