Lab04/05_lab06MockCtaAho.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab06apictaaho
  labels:
    app: lab06apictaaho
spec:
  ports:
    - name: mocks
      port: 7070
  selector:
    app: lab06apictaaho
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab06busctaahobus
spec:
  selector:
    matchLabels:
      app: lab06apictaaho
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lab06apictaaho
    spec:
      containers:
        - name: lab06busctaaho
          image: mzegarra/lab06busctaaho:0.0.3
          imagePullPolicy: IfNotPresent #Always
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 35
             periodSeconds: 10
             timeoutSeconds: 10
             successThreshold: 1
             failureThreshold: 3
          livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8080
             initialDelaySeconds: 35
             periodSeconds: 10
             timeoutSeconds: 10
             successThreshold: 1
             failureThreshold: 3
          ports:
            - containerPort: 8080
            - containerPort: 7070
